test: set up structure for integration tests using test containers